[refactor] Changed css in color spacing to have correct alignment

--- a/AWS_Website/www_static/A1/styleguide/css_styleguide/page.css
+++ b/AWS_Website/www_static/A1/styleguide/css_styleguide/page.css
@@ -9,7 +9,7 @@
 }
 
 .eachBox {
-  width: 130px;
+  width: 135px;
   height: 100px;
 }
 
